# istio-sample

./: .gitignore  README.md  front.yaml  greeter.yaml  hello.yaml  manifests.yaml  skaffold.yaml
front/: Dockerfile  app.py  greeting_pb2_grpc.py  pyproject.toml
greeter/: Dockerfile  app.py  greeting_pb2.py  pyproject.toml
hello/: Dockerfile  app.py  pyproject.toml
protos/: greeting.proto
