[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["aita <792803+aita@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.13.8"
uvicorn = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
